# agenty

./: .gitignore  ALIAS_README.md  ALIAS_SUMMARY.md  CHAT_AGENT_README.md  CONSOLE_IMPLEMENTATION_SUMMARY.md  CONSOLE_README.md  DEVELOPMENT.md  DOCKER_SETUP_GUIDE.md  Dockerfile.backend.optimized  Dockerfile.console  PODSUMOWANIE.md  README.md  agenty_aliases.sh  asystent  cli.py  console_agenty.py  console_agenty_enhanced.py  docker-compose.console.yaml  docker-compose.perplexica.yaml  pyrightconfig.json  requirements-console.txt  requirements.txt  run_dev.sh  setup_alias.sh  setup_console_aliases.sh  start_agenty_console.sh  start_chat_console.sh  start_console_app.sh  test_app.py  test_chat_console.py  test_chat_integration.py  test_console.py
PARAGONY/: README.txt
WIEDZA_RAG/: README.txt
backend/: .env.bak  Dockerfile.dev  app_factory.py  docker_telegram_poller.py  logger.py  main.py  requirements-gpu.txt  settings.py  settings_optimized.py  start.sh
backend/agents/: agent_builder.py  agent_container.py  agent_factory.py  agent_registry.py  analytics_agent.py  base_agent.py  categorization_agent.py  chef_agent.py  circuit_breaker_monitor.py  circuit_breaker_wrapper.py  concise_response_agent.py  enhanced_memory_manager.py  error_types.py  executor.py  fallback_manager.py  general_conversation_agent.py  gmail_inbox_zero_agent.py  hierarchical_architecture.py  intent_detector.py  interfaces.py  local_enhanced_agents.py  meal_planner_agent.py  memory_manager.py  ml_intent_detector.py  ocr_agent.py  ocr_rag_integration_agent.py  orchestration_components.py  orchestrator.py  orchestrator_errors.py  orchestrator_factory.py  pantry_agent.py  parallel_orchestrator.py  planner.py  plugin_interface.py  plugin_manager.py  promo_scraping_agent.py  prompts.py  query_router.py  quick_handlers.py  rag_agent.py  (+13 more)
backend/api/: __init__.py  agents.py  agents_v1.py  analytics.py  chat.py  chat_v1.py  chat_websocket.py  food.py  health.py  monitoring.py  monitoring_enhanced.py  openapi.py  pantry.py  settings.py  upload.py  websocket.py
backend/auth/: __init__.py  auth_middleware.py  auth_service.py  jwt_handler.py  models.py  routes.py  schemas.py
backend/config/: __init__.py  celery_config.py
backend/core/: agent_specific_config.py  alerting.py  anti_hallucination_decorator.py  anti_hallucination_decorator_optimized.py  anti_hallucination_system.py  anti_hallucination_system_optimized.py  async_agent_communication.py  async_patterns.py  backup_manager.py  cache_manager.py  categorization_cache.py  concise_rag_processor.py  container.py  crud.py  database.py  database_migrations.py  database_optimizer.py  decorators.py  document_loader.py  easyocr_fallback.py  enhanced_backup_manager.py  enhanced_name_normalizer.py  enhanced_ocr.py  event_bus.py  exceptions.py  faiss_gpu_service.py  feedback_loop.py  file_security.py  file_validation_utils.py  google_taxonomy_enhancer.py  gpu_ocr.py  hybrid_llm_client.py  interfaces.py  language_detector.py  llm_client.py  local_system_optimizer.py  mcp_integration.py  memory.py  memory_manager.py  middleware.py  (+38 more)
backend/domain/: repositories.py
backend/examples/: multi_agent_optimization_example.py
backend/integrations/: telegram_bot.py  telegram_commands.py  telegram_file_handler.py  telegram_notifications.py  web_search.py
backend/ml_training/: intent_trainer.py
backend/models/: __init__.py  (+4 more)
config/: .pre-commit-config.yaml  bandit.yaml  comprehensive_test_plan.json  coverage.json  coverage_final.json  coverage_integration.json  enhanced_test_results.json  foodsave-ai.service  foodsave_backend.spec  frontend_backend_integration_test_results.json  frontend_functionality_test_results.json  full_system_test_results.json  mypy.ini  optimization_test_results.json  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  ruff_results.json
config/docker/: docker-compose.dev.yaml  docker-compose.optimized.yaml
config/environments/: .env.bak  .env.example  .env.simple  backend.env
console/: api_client.py  ui_components.py
console_app/: __init__.py  chat_agent.py  config.py  console_ui.py  export_manager.py  main.py  rag_manager.py  receipt_processor.py
docs/: ALL_SCRIPTS_DOCUMENTATION.md  ANTI_HALLUCINATION_OPTIMIZATION_PROPOSAL.md  ANTI_HALLUCINATION_SYSTEM.md  ASYNC_RECEIPT_PROCESSING_GUIDE.md  AUDIT_REPORT.md  BIELIK_11B_V2.3_PRIMARY_MODEL_SETUP.md  BIELIK_4.5B_PRIMARY_MODEL_SETUP.md  CHANGELOG.md  CHANGELOG_2025-07-27.md  CODE_QUALITY_MONITORING_GUIDE.md  COMPREHENSIVE_DOCUMENTATION_PLAN.md  CONVERSATION_CONTEXT_MANAGEMENT.md  CURRENT_SYSTEM_STATUS.md  CURSOR_IDE_OPTIMIZATION.md  DATABASE_OPTIMIZATION_GUIDE.md  DEVELOPMENT_AUTHENTICATION_GUIDE.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_STATUS.md  DOCKER_OPTIMIZATION_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY_2025-07-19.md  DOCUMENTATION_UPDATE_SUMMARY_2025-07-27.md  ENHANCED_NAME_NORMALIZER_GUIDE.md  FAISS_GPU_MIGRATION_GUIDE.md  FINAL_OCR_TESTING_SUMMARY.md  FINAL_REPORT.md  GENERAL_CHAT_IMPLEMENTATION.md  GMAIL_INBOX_ZERO_AGENT.md  GOOGLE_PRODUCT_TAXONOMY_INTEGRATION.md  GOOGLE_TAXONOMY_INTEGRATION_SUMMARY.md  GUI_INTEGRATION_SUMMARY.md  HEALTH_CHECK_CONFIGURATION.md  MIGRATION_GUIDE.md  MIGRATION_TO_NATIVE_GUI.md  OCR_AGENTS_INTEGRATION_GUIDE.md  OCR_AGENT_TESTING_REPORT.md  OCR_INTEGRATION_STATUS.md  OCR_RAG_INTEGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  (+28 more)
tests/: conftest.py  run_enhanced_tests.py  telegram_integration_test.py  test_error_handling.py  test_infrastructure_fixes.py  test_memory_manager_fixes.py  test_receipt_processing_fixed.py  test_security_backup_integration.py
(+421 files in other folders)
